tests/type-errors/13-annot-mismatch.flt
// Type annotation mismatch: bool annotated as int
// --- Command: dotnet run --project FunLang -- --emit-type --expr "(true : int)" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected int but got bool
 --> <expr>:1:1-5
   = due to annotation: <expr>:1:0-12
   = note: expected int due to annotation at <expr>:1:0-12
   = hint: The type annotation at <expr>:1:0-12 expects int
